# tuetoken

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  wheels.yml
python/tuetoken/: __init__.py  __init__.pyi  _auto.py  _tiktoken.py
src/: bpe.rs  cjk.rs  lib.rs  pretok.rs  unicode.rs  unicode_tables.rs
tests/: README.md  _tiktoken_json.py  bench_chat.py  bench_models.py  bench_three_way_rust.py  stress_diverse.py  test_tuetoken.py
tools/: gen_unicode_rs.py
